# mdship

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  LICENSE-APACHE2  LICENSE-MIT  LICENSES.txt  README.md  RELEASES.md  build.sh  pyproject.toml  release.sh
documentation/: AI.md  IMPORT.md  INCLUDE.md  MERMAID.md  SET.md  SIP.md  SLURP.md  SUP.md  TEMPLATE.md  TOC.md  ai_managed_conten.md  content_integrity.md  placeholder.md
documentation/articles/: ai_managed_conten.md
documentation/commands/: ai-check.md  ai-context-and-update.md  ai-fix.md  fix-headings.md  init.md  number.md  reflow.md  semantic-line-breaks.md  shift-headings.md  sum.md  unnumber.md  update.md  validate.md  verify.md
documentation/future/: ai_deps.md  dry_run.md  feature_edit_warning.md  include_extensions.md  pin_checksum.md  python_scripts.md
documentation/narration/: introduction.sh  introduction.txt  number.md  number.txt
mdship/: __init__.py  cli.py  markdown.py  mcp_server.py
mdship/skills/ai-fix/: SKILL.md
mdship/skills/ai-placeholder/: SKILL.md
mdship/skills/ai-review/: SKILL.md
tests/: including.md  mermaid.md  sample_data.json  sample_data.xml  test_include.md  test_markdown.py  test_variables.md  variables.md
