[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdship"
version = "1.1.4"
description = "CLI and MCP tool for manipulating markdown files"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "Peter Verhas", email = "peter.verhas@gmail.com"}]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "mcp>=1.0",
    "markdown-it-py>=3",
    "pyyaml>=6",
    "merm>=0.1",
]

[project.urls]
Homepage = "https://github.com/verhas/mdship"
Repository = "https://github.com/verhas/mdship"
"Bug Tracker" = "https://github.com/verhas/mdship/issues"

[project.scripts]
mdship = "mdship.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
python-preference = "system"
